--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
