--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
